--- a/vteba/pom.xml
+++ b/vteba/pom.xml
@@ -14,7 +14,7 @@
       <spring-security-version>3.1.4.RELEASE</spring-security-version>
       <struts2-version>2.3.15.3</struts2-version>
       <tiles-version>2.2.2</tiles-version>
-      <hibernate-version>4.2.6.Final</hibernate-version>
+      <hibernate-version>4.3.0.Final</hibernate-version>
       <jibx-version>1.2.4.5</jibx-version>
       <cxf-version>2.7.7</cxf-version>
       <activemq-version>5.8.0</activemq-version>
@@ -468,8 +468,14 @@
     
     <dependency>
 	  <groupId>org.hibernate.javax.persistence</groupId>
-	  <artifactId>hibernate-jpa-2.0-api</artifactId>
-	  <version>1.0.1.Final</version>
+	  <artifactId>hibernate-jpa-2.1-api</artifactId>
+	  <version>1.0.0.Final</version>
+	</dependency>
+	
+	<dependency>
+	  <groupId>org.hibernate</groupId>
+	  <artifactId>hibernate-entitymanager</artifactId>
+	  <version>${hibernate-version}</version>
 	</dependency>
 	
     <dependency>
@@ -489,11 +495,15 @@
       <artifactId>validation-api</artifactId>
       <version>1.0.0.GA</version>
 	</dependency>
-	
 	<dependency>
 	  <groupId>org.jboss.spec.javax.transaction</groupId>
 	  <artifactId>jboss-transaction-api_1.1_spec</artifactId>
 	  <version>1.0.1.Final</version>
+	</dependency>
+	<dependency>
+	  <groupId>org.jboss.spec.javax.transaction</groupId>
+	  <artifactId>jboss-transaction-api_1.2_spec</artifactId>
+	  <version>1.0.0.Final</version>
 	</dependency>
 	<dependency>
 	  <groupId>org.jboss.logging</groupId>
