--- a/vteba/pom.xml
+++ b/vteba/pom.xml
@@ -12,7 +12,7 @@
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
       <spring-version>4.0.0.RELEASE</spring-version>
       <spring-security-version>3.1.4.RELEASE</spring-security-version>
-      <struts2-version>2.3.15.3</struts2-version>
+      <struts2-version>2.3.16</struts2-version>
       <tiles-version>2.2.2</tiles-version>
       <hibernate-version>4.3.0.Final</hibernate-version>
       <jibx-version>1.2.4.5</jibx-version>
@@ -102,25 +102,25 @@
 <!-- 	</dependency> -->
             
     <!-- struts2 start -->
-<!--     <dependency> -->
-<!-- 	  <groupId>org.apache.struts</groupId> -->
-<!-- 	  <artifactId>struts2-core</artifactId> -->
-<!-- 	  <version>${struts2-version}</version> -->
-<!-- 	  <exclusions> -->
-<!-- 	    <exclusion> -->
-<!-- 	      <groupId>javassist</groupId> -->
-<!--           <artifactId>javassist</artifactId> -->
-<!-- 	    </exclusion> -->
-<!-- 	    <exclusion> -->
-<!-- 	    	<groupId>asm</groupId> -->
-<!-- 			<artifactId>asm</artifactId> -->
-<!-- 	    </exclusion> -->
-<!-- 	    <exclusion> -->
-<!-- 	    	<groupId>asm</groupId> -->
-<!-- 			<artifactId>asm-commons</artifactId> -->
-<!-- 	    </exclusion> -->
-<!-- 	  </exclusions> -->
-<!-- 	</dependency> -->
+    <dependency>
+	  <groupId>org.apache.struts</groupId>
+	  <artifactId>struts2-core</artifactId>
+	  <version>${struts2-version}</version>
+	  <exclusions>
+	    <exclusion>
+	      <groupId>javassist</groupId>
+          <artifactId>javassist</artifactId>
+	    </exclusion>
+	    <exclusion>
+	    	<groupId>asm</groupId>
+			<artifactId>asm</artifactId>
+	    </exclusion>
+	    <exclusion>
+	    	<groupId>asm</groupId>
+			<artifactId>asm-commons</artifactId>
+	    </exclusion>
+	  </exclusions>
+	</dependency>
 
 <!-- 	<dependency> -->
 <!-- 	  <groupId>org.apache.ant</groupId> -->
@@ -241,11 +241,11 @@
 <!-- 	  <version>${struts2-version}</version> -->
 <!-- 	</dependency> -->
 
-<!-- 	<dependency> -->
-<!-- 	  <groupId>org.apache.struts</groupId> -->
-<!--       <artifactId>struts2-spring-plugin</artifactId> -->
-<!--       <version>${struts2-version}</version> -->
-<!-- 	</dependency> -->
+	<dependency>
+	  <groupId>org.apache.struts</groupId>
+      <artifactId>struts2-spring-plugin</artifactId>
+      <version>${struts2-version}</version>
+	</dependency>
 
 
 	<dependency>
