--- a/vteba/pom.xml
+++ b/vteba/pom.xml
@@ -719,7 +719,11 @@
 			</exclusion>
 		</exclusions>
 	</dependency>
-	
+<!-- 	<dependency> -->
+<!-- 		<groupId>javax.mail</groupId> -->
+<!-- 		<artifactId>mail</artifactId> -->
+<!-- 		<version>1.4.7</version> -->
+<!-- 	</dependency> -->
 <!--     <dependency> -->
 <!-- 		<groupId>org.jboss.resteasy</groupId> -->
 <!-- 		<artifactId>resteasy-jackson2-provider</artifactId> -->
@@ -755,7 +759,7 @@
 <!-- 			</exclusion> -->
 <!-- 		</exclusions> -->
 <!-- 	</dependency> -->
-
+		
 <!-- 	<dependency> -->
 <!--         <groupId>org.jboss.resteasy</groupId> -->
 <!--         <artifactId>resteasy-servlet-initializer</artifactId> -->
