--- a/vteba/pom.xml
+++ b/vteba/pom.xml
@@ -10,7 +10,7 @@
   
   <properties>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-      <spring-version>4.0.0.RELEASE</spring-version>
+      <spring-version>4.0.2.RELEASE</spring-version>
       <spring-security-version>3.1.4.RELEASE</spring-security-version>
       <struts2-version>2.3.16</struts2-version>
       <tiles-version>2.2.2</tiles-version>
@@ -476,6 +476,7 @@
 	  <groupId>org.hibernate</groupId>
 	  <artifactId>hibernate-entitymanager</artifactId>
 	  <version>${hibernate-version}</version>
+<!-- 	  <scope>provided</scope> -->
 	</dependency>
 	
     <dependency>
