des加密算法改变。fastjson jaxrs provider

--- a/vteba/src/main/resources/jndi.properties
+++ b/vteba/src/main/resources/jndi.properties
@@ -24,8 +24,8 @@ jdbc.supplychainServerName=localhost
 jdbc.supplychainServerPort=3306
 jdbc.supplychainDatabaseName=supplychain
 
-jdbc.username=CBoJZ/NegHo=
-jdbc.password=s4ky4De74mo=
+jdbc.username=yCwqSoC+8aE=
+jdbc.password=u5IKV28JND0=
 hibernate.format_sql=false
 hibernate.show_sql=true
 hibernate.jdbc.batch_size=50
