--- a/vteba/pom.xml
+++ b/vteba/pom.xml
@@ -10,19 +10,20 @@
   
   <properties>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-      <spring-version>4.0.2.RELEASE</spring-version>
+      <spring-version>4.0.6.RELEASE</spring-version>
       <spring-security-version>3.2.3.RELEASE</spring-security-version>
-      <struts2-version>2.3.16</struts2-version>
+      <struts2-version>2.3.16.3</struts2-version>
       <tiles-version>2.2.2</tiles-version>
-      <hibernate-version>4.3.0.Final</hibernate-version>
-      <jibx-version>1.2.4.5</jibx-version>
-      <cxf-version>2.7.7</cxf-version>
-      <activemq-version>5.9.0</activemq-version>
+      <tiles3>3.0.1</tiles3>
+      <hibernate-version>4.3.5.Final</hibernate-version>
+      <jibx-version>1.2.4.5</jibx-version> 
+      <cxf-version>2.7.4</cxf-version>
+      <activemq-version>5.8.0</activemq-version>
       <infinispan-version>5.3.0.Final</infinispan-version>
       <asm-version>4.1</asm-version>
       <hornetq-version>2.2.21.Final</hornetq-version>
       <jackson-version>2.2.3</jackson-version>
-      <resteasy-version>3.0.4.Final</resteasy-version>
+      <resteasy-version>3.0.8.Final</resteasy-version>
       <httpcomp-version>4.3.2</httpcomp-version>
   </properties>
   
@@ -54,14 +55,14 @@
   		<artifactId>vteba-web</artifactId>
   		<version>1.0.1</version>
   	</dependency>
-    <!-- 
-    <dependency>
-      <groupId>com.sun</groupId>
-      <artifactId>tools</artifactId>
-      <version>1.7.0</version>
-      <scope>system</scope>
-      <systemPath>${JAVA_HOME}/lib/tools.jar</systemPath>
-    </dependency> -->
+    
+<!--     <dependency> -->
+<!--       <groupId>com.sun</groupId> -->
+<!--       <artifactId>tools</artifactId> -->
+<!--       <version>1.7.0</version>  -->
+<!--       <scope>system</scope> -->
+<!--       <systemPath>${JAVA_HOME}/lib/tools.jar</systemPath> -->
+<!--     </dependency> -->
     <dependency>
     	<groupId>jaxen</groupId>
     	<artifactId>jaxen</artifactId>
@@ -283,11 +284,11 @@
 	  <scope>provided</scope>
 	</dependency>
 	
-	<dependency>
-	  <groupId>dwr</groupId>
-	  <artifactId>dwr</artifactId>
-	  <version>3.0.rc2</version>
-	</dependency>
+<!-- 	<dependency> -->
+<!-- 	  <groupId>dwr</groupId> -->
+<!-- 	  <artifactId>dwr</artifactId> -->
+<!-- 	  <version>3.0.rc2</version> -->
+<!-- 	</dependency> -->
 <!-- 	<dependency> -->
 <!-- 		<groupId>org.directwebremoting</groupId> -->
 <!-- 		<artifactId>dwr</artifactId> -->
@@ -1276,11 +1277,11 @@
 	  <version>4.0.21.Final</version>
 	</dependency>
 	
-	<dependency>
-	  <groupId>io.netty</groupId>
-	  <artifactId>netty</artifactId>
-	  <version>3.9.2.Final</version>
-	</dependency>
+<!-- 	<dependency> -->
+<!-- 	  <groupId>io.netty</groupId> -->
+<!-- 	  <artifactId>netty</artifactId> -->
+<!-- 	  <version>3.9.2.Final</version> -->
+<!-- 	</dependency> -->
 
 <!-- 	<dependency> -->
 <!-- 	  <groupId>org.apache.mina</groupId> -->
@@ -1399,16 +1400,16 @@
 		    <artifactId>jedis</artifactId>
 		    <version>2.2.0</version>
 		</dependency>
-		<dependency>
-			<groupId>us.codecraft</groupId>
-			<artifactId>webmagic-core</artifactId>
-			<version>0.4.2</version>
-		</dependency>
-		<dependency>
-	        <groupId>us.codecraft</groupId>
-	        <artifactId>webmagic-extension</artifactId>
-	        <version>0.4.2</version>
-	    </dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>us.codecraft</groupId> -->
+<!-- 			<artifactId>webmagic-core</artifactId> -->
+<!-- 			<version>0.4.2</version> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 	        <groupId>us.codecraft</groupId> -->
+<!-- 	        <artifactId>webmagic-extension</artifactId> -->
+<!-- 	        <version>0.4.2</version> -->
+<!-- 	    </dependency> -->
 <!--         <dependency> -->
 <!-- 			<groupId>commons-httpclient</groupId> -->
 <!-- 			<artifactId>commons-httpclient</artifactId> -->
