--- a/vteba/pom.xml
+++ b/vteba/pom.xml
@@ -15,7 +15,7 @@
       <struts2-version>2.3.16.3</struts2-version>
       <tiles-version>2.2.2</tiles-version>
       <tiles3>3.0.1</tiles3>
-      <hibernate-version>4.3.5.Final</hibernate-version>
+      <hibernate-version>4.3.6.Final</hibernate-version>
       <jibx-version>1.2.4.5</jibx-version> 
       <cxf-version>2.7.4</cxf-version>
       <activemq-version>5.8.0</activemq-version>
@@ -25,6 +25,10 @@
       <jackson-version>2.2.3</jackson-version>
       <resteasy-version>3.0.8.Final</resteasy-version>
       <httpcomp-version>4.3.2</httpcomp-version>
+      <protostuff>1.0.8</protostuff>
+      <marshalling>1.4.8.Final</marshalling>
+      <netty4>4.0.23.Final</netty4>
+      <netty3>3.9.3.Final</netty3>
   </properties>
   
   <profiles>
@@ -110,7 +114,61 @@
 	  	</exclusion>
 	  </exclusions>
 	</dependency>
-                    
+    
+    <dependency>
+		<groupId>com.dyuproject.protostuff</groupId>
+		<artifactId>protostuff-core</artifactId>
+		<version>${protostuff}</version>
+	</dependency>
+    <dependency>
+		<groupId>com.dyuproject.protostuff</groupId>
+		<artifactId>protostuff-api</artifactId>
+		<version>${protostuff}</version>
+	</dependency>
+	<dependency>
+		<groupId>com.dyuproject.protostuff</groupId>
+		<artifactId>protostuff-runtime</artifactId>
+		<version>${protostuff}</version>
+	</dependency>
+<!-- 	<dependency> -->
+<!-- 		<groupId>com.dyuproject.protostuff</groupId> -->
+<!-- 		<artifactId>protostuff-xml</artifactId> -->
+<!-- 		<version>${protostuff}</version> -->
+<!-- 	</dependency> -->
+<!-- 	<dependency> -->
+<!-- 		<groupId>com.dyuproject.protostuff</groupId> -->
+<!-- 		<artifactId>protostuff-json</artifactId> -->
+<!-- 		<version>${protostuff}</version> -->
+<!-- 	</dependency> -->
+<!-- 	<dependency> -->
+<!-- 		<groupId>com.dyuproject.protostuff</groupId> -->
+<!-- 		<artifactId>protostuff-compiler</artifactId> -->
+<!-- 		<version>${protostuff}</version> -->
+<!-- 	</dependency> -->
+	
+	<dependency>
+		<groupId>com.google.protobuf</groupId>
+		<artifactId>protobuf-java</artifactId>
+		<version>2.5.0</version>
+	</dependency>
+	
+	<dependency>
+		<groupId>org.jboss.marshalling</groupId>
+		<artifactId>jboss-marshalling</artifactId>
+		<version>${marshalling}</version>
+	</dependency>
+	<dependency>
+		<groupId>org.jboss.marshalling</groupId>
+		<artifactId>jboss-marshalling-river</artifactId>
+		<version>${marshalling}</version>
+	</dependency>
+	<dependency>
+		<groupId>org.jboss.marshalling</groupId>
+		<artifactId>jboss-marshalling-serial</artifactId>
+		<version>${marshalling}</version>
+	</dependency>
+	
+	                
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -1271,17 +1329,17 @@
 	</dependency> -->
 	<!-- xml binging tools end -->
 	
-	<dependency>
-	  <groupId>io.netty</groupId>
-	  <artifactId>netty-all</artifactId>
-	  <version>4.0.21.Final</version>
-	</dependency>
-	
 <!-- 	<dependency> -->
 <!-- 	  <groupId>io.netty</groupId> -->
 <!-- 	  <artifactId>netty</artifactId> -->
-<!-- 	  <version>3.9.2.Final</version> -->
+<!-- 	  <version>${netty3}</version> -->
 <!-- 	</dependency> -->
+
+	<dependency>
+	  <groupId>io.netty</groupId>
+	  <artifactId>netty-all</artifactId>
+	  <version>${netty4}</version>
+	</dependency>
 
 <!-- 	<dependency> -->
 <!-- 	  <groupId>org.apache.mina</groupId> -->
