--- a/vteba/src/main/resources/jndi.properties
+++ b/vteba/src/main/resources/jndi.properties
@@ -37,7 +37,7 @@ hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.EhCacheRegionFa
 ehcache.configFileName.skmbw=/ehcache_hibernate_skmbw.xml
 ehcache.configFileName.bizili=/ehcache_hibernate_bizili.xml
 ehcache.configFileName.supplychain=/ehcache_hibernate_supplychain.xml
-#放到缓存中的对象按照结构化存储
+#放到缓存中的对象按照结构化存储595985464
 hibernate.cache.use_structured_entries=true
 hibernate.generate_statistics=false
 
