--- a/vteba/src/main/webapp/WEB-INF/web.xml
+++ b/vteba/src/main/webapp/WEB-INF/web.xml
@@ -5,16 +5,16 @@
 	http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0" metadata-complete="true">
 	
 	<!-- jboss environment -->
-	<context-param>
-		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath:spring/application-context.xml</param-value>
-	</context-param>
-	
-	<!-- btm environment-->
 <!-- 	<context-param> -->
 <!-- 		<param-name>contextConfigLocation</param-name> -->
-<!-- 		<param-value>classpath:spring/application-btm.xml</param-value> -->
+<!-- 		<param-value>classpath:spring/application-context.xml</param-value> -->
 <!-- 	</context-param> -->
+	
+	<!-- btm environment-->
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>classpath:spring/application-btm.xml</param-value>
+	</context-param>
 	
 	<!--Spring Secutiry3 委托拦截器代理-->
 	<filter>
@@ -70,7 +70,8 @@
    	</listener>
    	<!-- resteasy和spring整合，有了这个，ContextLoaderListener就不要了  -->
 	<listener>
-    	<listener-class>org.jboss.resteasy.plugins.spring.SpringContextLoaderListener</listener-class>  
+<!--     	<listener-class>org.jboss.resteasy.plugins.spring.SpringContextLoaderListener</listener-class>   -->
+		<listener-class>com.vteba.service.context.listener.SpringContextLoaderListener</listener-class>
   	</listener>
 	
 <!-- 	<listener> -->
@@ -192,20 +193,22 @@
         <url-pattern>/</url-pattern>
     </servlet-mapping>
 
-	<!-- 要指定前缀否则和spring mvc的url-pattern冲突。还有一种解决办法就是将spring mvc和reseasy整合在一起 -->
-<!-- 	<servlet> -->
-<!--       	<servlet-name>resteasy</servlet-name> -->
-<!--       	<servlet-class>org.jboss.resteasy.plugins.server.servlet.HttpServletDispatcher</servlet-class> -->
-<!--       	<init-param> -->
-<!--       		<param-name>resteasy.servlet.mapping.prefix</param-name> -->
-<!--         	<param-value>/rs</param-value> -->
-<!--       	</init-param> -->
-<!--     </servlet> -->
+	<!-- 要指定前缀否则和spring mvc的url-pattern冲突。还有一种解决办法就是将spring mvc和reseasy整合在一起
+		tomcat中需要这个，jboss中就要注释掉了
+	 -->
+	<servlet>
+      	<servlet-name>resteasy</servlet-name>
+      	<servlet-class>org.jboss.resteasy.plugins.server.servlet.HttpServletDispatcher</servlet-class>
+      	<init-param>
+      		<param-name>resteasy.servlet.mapping.prefix</param-name>
+        	<param-value>/rs</param-value>
+      	</init-param>
+    </servlet>
   
-<!--    	<servlet-mapping> -->
-<!--       	<servlet-name>resteasy</servlet-name> -->
-<!--       	<url-pattern>/rs/*</url-pattern> -->
-<!--    	</servlet-mapping> -->
+   	<servlet-mapping>
+      	<servlet-name>resteasy</servlet-name>
+      	<url-pattern>/rs/*</url-pattern>
+   	</servlet-mapping>
 	
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
